--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,6 +27,7 @@ h1{
   justify-content: center;
   align-items: center;
   gap: 5px;
+  background-color: black;
 }
 
 .keyboard-row{
@@ -44,8 +45,13 @@ h1{
   height: 40px;
   border: 1px solid black;
   text-align: center;
+  background-color: grey;
 
   padding: 15px 5px 0px 5px;
+}
+
+.keyboard-key:hover{
+  background-color: green;
 }
 
 textarea{
